# triodizer

./: CMakeLists.txt  test_plugin.py
Source/: PassiveLPF.h  PluginEditor.cpp  TriodeGainStage.h  TriodeWDF.h
TestWDF/: CMakeLists.txt  TestWDF.cpp
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Schematic.cpp  Schematic.h  SchematicElement.cpp  SchematicElement.h  SchematicPanel.cpp  SchematicPanel.h  TriodeElement.cpp  TriodeElement.h  TriodeGainStage.h  TriodeWDF.h  TwoTermElement.cpp  TwoTermElement.h
src/backup/: ResistorElement.cpp  ResistorElement.h  Schematic.cpp  Schematic.h  SchematicElement.cpp  SchematicElement.h
test/: CMakeLists.txt  TestWDF.cpp  plot.py  test_plugin.py
